

Revision History:
22-Aug-2002

Acknowledgements:
    Thanks to Michael Reardon for implementing the ServletUnit header method handling code and session.getAttributeNames

Additions:
    1. ServletUnit now supports HttpServletResponse header methods: setHeader, addHeader, setIntHeader, addIntHeader,
       setDateHeader, and addDateHeader.
    2. ServletUnit now supports HttpSession.getAttributeNames

21-Aug-2002

Additions:
    1. JavaScript - Window.confirm is now supported. By default, it always returns true. Users may change this by supplying an
       implementation of DialogResponder to the WebClient.
    2. JavScript - Window.prompt is now supported. By default, it always returns the default value. Users may change this by supplying an
       implementation of DialogResponder to the WebClient.

20-Aug-2002

Problems fixed:
    1. JavaScript - HTML comments prevented JavaScript from working
    2. JavaScript - Errors were reported if Rhino was not present in the classpath
    3. Fixed handling of error statuses when information is still sent on input stream

Additions:
    1. JavaScript - Added Checkbox.value property, along with Checkbox.defaultChecked and Input.name
    2. JavaScript - Added Radio.value, Radio.checked, and Radio.defaultChecked properties
    3. JavaScript - Added Radio.onClick event support

19-Aug-2002

Additions:
    1. WebForm.getButtons() now returns all form buttons, including reset buttons and generic buttons.
    2. JavaScript: The "onClick" event is now supported for generic form buttons
    3. JavaScript: Form.submit() is now working


16-Aug-2002
Acknowledgements:
   Thanks to PeterRoyal for fixing the handling of query-only relative URLs and the IllegalStateException when
       scripting is disable.

Problems fixes:
   1. Relative URLs beginning with "?" were not being handled properly.
   2. Disabling scripting result in IllegalStateException being thrown.

Additions: